# mcucpp

./: .editorconfig  .gitmodules  CMakeLists.txt  Kconfig
cmake/: mcucpp.cmake
config/: Kconfig  chip.config
doc/: kconfig.md
examples/: CMakeLists.txt
examples/hello-world/: main.cpp
examples/interrupt-handling/: main.cpp
include/mcu/: array_view.h  experimental.h  internal.h  util.h
include/mcu/arm/: core_x.h  mutex.h  semihosting.h
include/mcu/experimental/: bits.h  static_assert.h  timers.h
include/mcu/io/: internal.h  output_stream.h
include/mcu/nonew/: array_ref.h  function.h  queue.h
include/mcu/stm32cube/: debug.h  uart.h
include/mcu/stm32cubemx/: debug.h  uart.h
src/: experimental.cpp
src/arm/: semihosting-putc.cpp  semihosting-putchar.cpp  semihosting-puts.cpp  semihosting-stdout.cpp  semihosting.cpp
src/generic/: putchar.cpp  puts.cpp  tinyprintf-printf.cpp  tinyprintf-snprintf.cpp
src/host/: stdout-impl.cpp
src/io/: output_stream.cpp
src/mcu/nonew/: function.h  queue.h
src/stm32cube/: stdout-impl.cpp  uart.cpp
src/stm32cubemx/: uart.cpp
test/: array_view-test.cpp  experimental-test.cpp  function-test.cpp  queue-test.cpp  string_view-test.cpp  test-utils.h  tests.cpp  util-value_to_int_t-test.cpp
